data/derived/comb/progs/unify/prog6294.ml.out
Characters 111-119:
  wwhile (helper b,b);;
          ^^^^^^^^
Error: This expression has type bool * 'a
       but an expression was expected of type 'b -> 'b * bool
